--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,22 @@ kernel
 kernelmemfs
 mkfs
 .gdbinit
+Makefile.test
+test_1.c
+test_2.c
+test_3.c
+test_4.c
+test_5.c
+test_6.c
+test_7.c
+test_8.c
+test_9.c
+test_10.c
+test_11.c
+test_12.c
+test_13.c
+test_14.c
+test_15.c
+*.err
+*.out
+*.rc
